--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>INFO2180 Lab 2</h1>
     <p>This is a webpage for Lab 2 of INFO2180.</p>
+    <img href="_vag_specimen.jpg" alt="Vagina Specimen>
 </body>
 
 </html>
